welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if(n-10>=90 && n+10<=110){
  ^